# ui-signal-plotter

./: .dockerignore  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  heroku.yml  makefile  pyproject.toml
notebooks/: component.ipynb
src/: app.py
src/application/: interfaces.py  services.py  use_cases.py
src/domain/entities/: component.py  processors.py
src/domain/exceptions/: __init__.py
src/domain/value_objects/: __init__.py
src/infrastructure/: api.py  app.py
src/infrastructure/repositories/: memory.py
src/static/: oscilloscope.js
src/templates/: index.html
tests/unit/application/: __init__.py  test_interfaces.py
tests/unit/infrastructure/repositories/: test_memory.py
