[tool.poetry]
name = "ui-signal-plotter"
version = "0.1.0"
description = "Simple UI to Plot signal from any source"
authors = ["azrrael.exe <vcamargo.e@gmail.com>"]
package-mode = false
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = {extras = ["standar"], version = "^0.34.0"}
jinja2 = "^3.1.5"
websockets = "^15.0"
pyserial = "^3.5"
pyserial-asyncio = "^0.6"
scikit-learn = "^1.6.1"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
